Сделала начальную разметку главной страницы

--- a/index.html
+++ b/index.html
@@ -5,8 +5,104 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+<header>
+<nav>
+  <a href="index.html"><img src="/img/" alt="logo"></a>
+   <ul class="site-navigation">
+     <li><a href="#">Студия</a></li>
+     <li><a href="#">Клиенты</a></li>
+     <li><a href="catalog.html">Магазин</a></li>
+     <li><a href="#">Контакты</a></li>
+  </ul>
+  <div class="cart">
+    <a href="#">Корзина</a>
+  </div>
+  </nav>
+</header>
+<main>
+  <h1 class="visually-hidden">Дизайн-студия nёrds</h1>
+  <section class="slider">
+    <h2>Долго, дорого, скрупулёзно</h2>
+    <p class="slider-description">
+      Математически выверенный дизайн для вашего сайта или мобильного приложения.
+    </p>
+    <a class="button" href="#">Узнать больше</a>
+    <img src="img/" alt="nerds-description">
+  </section>
+  <section class="services">
+    <h2 class="visually-hidden">Направления работы</h2>
+      <ul>
+        <li>
+          <div class="services-item">
+            <h3>Веб-сайты</h3>
+            <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+            <a class="button services-button" href="#">Заказать</a>
+          </div>
+        </li>
+        <li>
+          <div class="services-item">
+            <h3>Приложения</h3>
+            <p>Покорите Топ-10 приложений в Appstore и Google Play</p>
+            <a class="button services-button" href="#">Заказать</a>
+          </div>
+        </li>
+        <li>
+          <div class="services-item">
+            <h3>Презентации</h3>
+            <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+            <a class="button services-button" href="#">Заказать</a>
+          </div>
+        </li>
+      </ul>
+    </section>
+    <section class="overview">
+      <h2 class="visually-hidden">Краткий обзор студии</h2>
+      <b>Мы- маленькая, но гордая дизайн-студия из Краснодара</b>
+      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчёт превыше креатива. Работаем не покладая рук, как роботы.</p>
+      <h3>Выполняем заказы на разработку</h3>
+      <ul class="overview-list">
+        <li>Веб-сайтов любой сложности</li>
+        <li>Мобильных приложений для iOS и Android</li>
+        <li>Слайд-шоу и видео для корпоративных презентаций</li>
+      </ul>
+      <div class="principles">
+      <img src="img" alt="logo">
+        <span>С 2004 года любим точность во всём:</span>
+        <ul>
+          <li class="principles-item">146% Уровень самоотдачи</li>
+          <li class="principles-item">100% Соблюдение сроков</li>
+          <li class="principles-item">50% Минимальная предоплата</li>
+        </ul>
+      </div>
+    </section>
+    <section class="clients">
+      <h2 class="visually-hidden">Наши клиенты</h2>
+      <img src="img" alt="htmlacademy">
+      <img src="img" alt="borodinski">
+      <img src="img" alt="pink">
+      <img src="img" alt="mishka">
+    </section>
+    </main>
+    <footer>
+    <section class="contacts"
+      <h2 class="visually-hidden">Контакты<h2>
+        <h3>Nёrds design studio</h3>
+        <p>191186, Санкт-Петербург<br>
+           ул. Б. Конюшенная, д.19/8</p>
+        <p>тел. +7(812) 275-75-75<p>
+        <button class="button">Напишите нам</button>
+      <img src="img/" alt="map">
+      <img src="img/" alt="geo tag">
+  </section>
+  <!-- Здесь форма "напишите нам" -->
+  <h2 class="visually-hidden">Мы в соцсетях</h2>
+  <ul class="social networks">
+    <li><a href="#"><img src="img/" alt="vkontakte"></a></li>
+    <li><a href="#"><img src="img/" alt="facebook"></a></li>
+    <li><a href="#"><img src="img/" alt="instagram"></a></li>
+  </ul>
+  <p><b>Давайте дружить, это выгодно!</b>
+    Скидка 10% для друзей из социальных сетей</p>
+</footer>
   </body>
 </html>
