--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
 <header>
 <nav>
-  <a href="index.html"><img src="/img/" alt="logo"></a>
+  <a href="index.html"><img src="img/nerds-logo.svg" width="160px" height="65px" alt="logo"></a>
    <ul class="site-navigation">
      <li><a href="#">Студия</a></li>
      <li><a href="#">Клиенты</a></li>
@@ -15,6 +15,7 @@
      <li><a href="#">Контакты</a></li>
   </ul>
   <div class="cart">
+    <img src="img/cart-icon.svg" width="15px" height="15px" alt="cart-icon">
     <a href="#">Корзина</a>
   </div>
   </nav>
@@ -26,8 +27,9 @@
     <p class="slider-description">
       Математически выверенный дизайн для вашего сайта или мобильного приложения.
     </p>
+    <img src="img/slide-1.png" width="698px" height="413px" alt="nerds-description">
     <a class="button" href="#">Узнать больше</a>
-    <img src="img/" alt="nerds-description">
+
   </section>
   <section class="services">
     <h2 class="visually-hidden">Направления работы</h2>
@@ -35,6 +37,7 @@
         <li>
           <div class="services-item">
             <h3>Веб-сайты</h3>
+            <img src="img/illustration-1.png" width="300px" height="146px" alt="web-sites">
             <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
             <a class="button services-button" href="#">Заказать</a>
           </div>
@@ -42,6 +45,7 @@
         <li>
           <div class="services-item">
             <h3>Приложения</h3>
+            <img src="img/illustration-2.png" width="300px" height="146px" alt="apps">
             <p>Покорите Топ-10 приложений в Appstore и Google Play</p>
             <a class="button services-button" href="#">Заказать</a>
           </div>
@@ -49,6 +53,7 @@
         <li>
           <div class="services-item">
             <h3>Презентации</h3>
+            <img src="img/illustration-3.png" width="300px" height="146px" alt="Presentations">
             <p>Вы даже не подозреваете, насколько вы изумительны!</p>
             <a class="button services-button" href="#">Заказать</a>
           </div>
@@ -66,7 +71,7 @@
         <li>Слайд-шоу и видео для корпоративных презентаций</li>
       </ul>
       <div class="principles">
-      <img src="img" alt="logo">
+      <img src="img/nerds-illustration.png" width="360px" height="208px" alt="logo">
         <span>С 2004 года любим точность во всём:</span>
         <ul>
           <li class="principles-item">146% Уровень самоотдачи</li>
@@ -77,10 +82,10 @@
     </section>
     <section class="clients">
       <h2 class="visually-hidden">Наши клиенты</h2>
-      <img src="img" alt="htmlacademy">
-      <img src="img" alt="borodinski">
-      <img src="img" alt="pink">
-      <img src="img" alt="mishka">
+      <img src="img/logo-1.png" width="199px" height="68px" alt="htmlacademy">
+      <img src="img/logo-2.png" width="209px" height="90px" alt="borodinski">
+      <img src="img/logo-3.png" width="185px" height="52px" alt="pink">
+      <img src="img/logo-4.png" width="173px" height="84px" alt="mishka">
     </section>
     </main>
     <footer>
@@ -91,15 +96,15 @@
            ул. Б. Конюшенная, д.19/8</p>
         <p>тел. +7(812) 275-75-75<p>
         <button class="button">Напишите нам</button>
-      <img src="img/" alt="map">
-      <img src="img/" alt="geo tag">
+      <img src="img/map.jpg" width="1440px" height="416px" alt="map">
+      <img src="img/map-marker.png" width="231px" height="190px"alt="geo-tag">
   </section>
   <!-- Здесь форма "напишите нам" -->
   <h2 class="visually-hidden">Мы в соцсетях</h2>
   <ul class="social networks">
-    <li><a href="#"><img src="img/" alt="vkontakte"></a></li>
-    <li><a href="#"><img src="img/" alt="facebook"></a></li>
-    <li><a href="#"><img src="img/" alt="instagram"></a></li>
+    <li><a href="#"><img src="img/vk-icon.svg" width="26px" height="15px" alt="vkontakte"></a></li>
+    <li><a href="#"><img src="img/fb-icon.svg" width="12px" height="22px" alt="facebook"></a></li>
+    <li><a href="#"><img src="img/insta-icon.svg" width="21px" height="21px" alt="instagram"></a></li>
   </ul>
   <p><b>Давайте дружить, это выгодно!</b>
     Скидка 10% для друзей из социальных сетей</p>
