--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <body>
 <header>
 <nav>
-  <a href="index.html"><img src="/img/" alt="logo"></a>
+  <a href="index.html"><img src="img/nerds-logo.svg" width="160px" height="65px" alt="logo"></a>
    <ul class="site-navigation-current">
      <li><a href="#">Студия</a></li>
      <li><a href="#">Клиенты</a></li>
@@ -15,6 +15,7 @@
      <li><a href="#">Контакты</a></li>
   </ul>
   <div class="cart">
+    <img src="img/cart-icon.svg" width="15px" height="15px" alt="cart-icon">
     <a href="#">Корзина</a>
   </div>
   </nav>
@@ -57,7 +58,7 @@
   </div>
   <ul class="catalog-list">
     <li>
-      <img src="img/" alt="Sedona">
+      <img src="img/img-sedona.jpg" width="360px" height="576px" alt="Sedona">
       <p class="catalog-item-hover">
         <a href="#"><h3>Sedona</h3><a>
         <span>Информационный сайт для туристов</span>
@@ -65,7 +66,7 @@
       </p>
     </li>
     <li>
-      <img src="img/" alt="pink">
+      <img src="img/img-pink.jpg" width="360px" height="576px" alt="pink">
       <p class="catalog-item-hover">
         <a href="#"><h3>Pink</h3><a>
         <span>Продуктивный лендинг приложения для iOS и Android</span>
@@ -73,7 +74,7 @@
       </p>
     </li>
     <li>
-      <img src="img/" alt="Borodinski">
+      <img src="img/img-barbershop.jpg" width="360px" height="576px" alt="Borodinski">
       <p class="catalog-item-hover">
         <a href="#"><h3>Borodinski</h3><a>
         <span>Сайт салона красоты. Для мужчин,да.</span>
@@ -81,7 +82,7 @@
       </p>
     </li>
     <li>
-      <img src="img/" alt="Mishka">
+      <img src="img/img-mishka.jpg" width="360px" height="576px" alt="Mishka">
       <p class="catalog-item-hover">
         <a href="#"><h3>Mishka</h3><a>
         <span>Интернет-магазин вязаных игрушек</span>
@@ -89,7 +90,7 @@
       </p>
     </li>
     <li>
-      <img src="img/" alt="A plus">
+      <img src="img/img-aplus.jpg" width="360px" height="576px" alt="A plus">
       <p class="catalog-item-hover">
         <a href="#"><h3>A plus</h3><a>
         <span>Лендинг курсов повышения квалификации</span>
@@ -97,7 +98,7 @@
       </p>
     </li>
     <li>
-      <img src="img/" alt="Kvast">
+      <img src="img/img-kvast.jpg" width="360px" height="576px" alt="Kvast">
       <p class="catalog-item-hover">
         <a href="#"><h3>Kvast</h3><a>
         <span>Промо-сайт производителя крафтового кваса</span>
@@ -119,15 +120,15 @@
        ул. Б. Конюшенная, д.19/8</p>
     <p>тел. +7(812) 275-75-75<p>
     <button class="button">Напишите нам</button>
-  <img src="img/" alt="map">
-  <img src="img/" alt="geo tag">
+  <img src="img/map.jpg" width="1440px" height="416px" alt="map">
+  <img src="img/map-marker.png" width="231px" height="190px"alt="geo-tag">
 </section>
 <!-- Здесь форма "напишите нам" -->
 <h2 class="visually-hidden">Мы в соцсетях</h2>
 <ul class="social networks">
-<li><a href="#"><img src="img/" alt="vkontakte"></a></li>
-<li><a href="#"><img src="img/" alt="facebook"></a></li>
-<li><a href="#"><img src="img/" alt="instagram"></a></li>
+<li><a href="#"><img src="img/vk-icon.svg" width="26px" height="15px" alt="vkontakte"></a></li>
+<li><a href="#"><img src="img/fb-icon.svg" width="12px" height="22px" alt="facebook"></a></li>
+<li><a href="#"><img src="img/insta-icon.svg" width="21px" height="21px" alt="instagram"></a></li>
 </ul>
 <p><b>Давайте дружить, это выгодно!</b>
 Скидка 10% для друзей из социальных сетей</p>
