--- a/catalog.html
+++ b/catalog.html
@@ -1,136 +1,171 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
-  </head>
-  <body>
-<header>
-<nav>
-  <a href="index.html"><img src="img/nerds-logo.svg" width="160px" height="65px" alt="logo"></a>
-   <ul class="site-navigation-current">
-     <li><a href="#">Студия</a></li>
-     <li><a href="#">Клиенты</a></li>
-     <li><a href="catalog.html">Магазин</a></li>
-     <li><a href="#">Контакты</a></li>
-  </ul>
-  <div class="cart">
-    <a href="#">Корзина</a>
-  </div>
-  </nav>
-</header>
-<main>
-<h1>Магазин готовых шаблонов</h1>
-<section class="filters">
-  <div class="filters-price">
-    <h2>Стоимость</h2>
-    <!-- range -->
-  </div>
-  <div class="filters-grid">
-    <h2>Сетка</h2>
-    <ul>
-      <li>Адаптивная</li>
-      <li>Фиксированная</li>
-      <li>Резиновая<li>
+
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Нёрдс</title>
+</head>
+
+<body>
+  <header>
+    <nav>
+      <a href="index.html"><img src="img/nerds-logo.svg" width="160" height="65" alt="Нёрдс"></a>
+      <ul class="site-navigation-current">
+        <li><a href="#">Студия</a></li>
+        <li><a href="#">Клиенты</a></li>
+        <li><a href="catalog.html">Магазин</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+      <div class="cart">
+        <a href="#">Корзина</a>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <h1>Магазин готовых шаблонов</h1>
+    <section class="filters">
+      <h2 class="visually-hidden">Фильтр шаблонов</h2>
+      <form class="filter" method="get" action="https://htmlacademy.ru">
+        <h3>Стоимость</h3>
+        <div class="price-range">
+          <span class="handle">Минимальная цена</span>
+          <span class="handle">Максимальная цена</span>
+          <span>От</span>
+          <span class="output-price">0</span>
+          <span>До</span>
+          <span class="output-price">15000</span>
+        </div>
+        <fieldset>
+          <legend>Сетка:</legend>
+          <ul>
+            <li class="filters-option"><input class="filter-radio" type="radio" name="grid-type" value="adaptive" id="adaptive-grid" checked><label for="adaptive-grid">Адаптивная</label></li>
+            <li class="filters-option"><input class="filter-radio" type="radio" name="grid-type" value="fixed" id="fixed-grid"><label for="fixed-grid">Фиксированная</label></li>
+            <li class="filters-option"><input class="filter-radio" type="radio" name="grid-type" value="rubber" id="rubber-grid"><label for="rubber-grid">Резиновая</label></li>
+          </ul>
+        </fieldset>
+        <fieldset>
+          <legend>Особенности:</legend>
+          <ul>
+            <li class="filters-option"><input class="filter-checkbox" type="checkbox" name="slider" id="checkbox-slider" checked><label for="checkbox-slider">Слайдер</label></li>
+            <li class="filters-option"><input class="filter-checkbox" type="checkbox" name="features-block" id="checkbox-features-block"><label for="checkbox-features-block">Блок преимуществ</label></li>
+            <li class="filters-option"><input class="filter-checkbox" type="checkbox" name="news" id="checkbox-news" checked><label for="checkbox-news">Новости</label></li>
+            <li class="filters-option"><input class="filter-checkbox" type="checkbox" name="gallery" id="checkbox-gallery"><label for="checkbox-gallery">Галерея</label></li>
+            <li class="filters-option"><input class="filter-checkbox" type="checkbox" name="cart" id="checkbox-cart"><label for="checkbox-cart">Корзина</label></li>
+          </ul>
+        </fieldset>
+        <button class="button" type="submit">Показать</button>
+    </section>
+    <div class="sorting">
+      <h3>Сортировать:</h3>
+      <button class="sorting-parameters-current" type="button">По цене</button>
+      <button class="sorting-parameters" type="button">По типу</button>
+      <button class="sorting-parameters" type="button">По названию</button>
+      <button class="button-sorting" type="button">По убыванию</button>
+      <button class="button-sorting" type="button">По возрастанию</button>
+    </div>
+    <ul class="catalog-list">
+      <li>
+        <img src="img/img-sedona.jpg" width="360" height="576" alt="Sedona">
+        <div class="catalog-item-hover">
+          <a href="#">
+            <h3>Sedona</h3>
+          </a>
+          <p>Информационный сайт для туристов</p>
+          <a class="button" href="#">9 900 руб.</a>
+        </div>
+      </li>
+      <li>
+        <img src="img/img-pink.jpg" width="360" height="576" alt="Pink">
+        <div class="catalog-item-hover">
+          <a href="#">
+            <h3>Pink</h3>
+          </a>
+          <p>Продуктивный лендинг приложения для iOS и Android</p>
+          <a class="button" href="#">9 900 руб.</a>
+        </div>
+      </li>
+      <li>
+        <img src="img/img-barbershop.jpg" width="360" height="576" alt="Borodinski">
+        <div class="catalog-item-hover">
+          <a href="#">
+            <h3>Borodinski</h3>
+          </a>
+          <p>Сайт салона красоты. Для мужчин,да.</p>
+          <a class="button" href="#">9 900 руб.</a>
+        </div>
+      </li>
+      <li>
+        <img src="img/img-mishka.jpg" width="360" height="576" alt="Mishka">
+        <div class="catalog-item-hover">
+          <a href="#">
+            <h3>Mishka</h3>
+          </a>
+          <p>Интернет-магазин вязаных игрушек</p>
+          <a class="button" href="#">9 900 руб.</a>
+        </div>
+      </li>
+      <li>
+        <img src="img/img-aplus.jpg" width="360" height="576" alt="A plus">
+        <div class="catalog-item-hover">
+          <a href="#">
+            <h3>A plus</h3>
+          </a>
+          <p>Лендинг курсов повышения квалификации</p>
+          <a class="button" href="#">9 900 руб.</a>
+        </div>
+      </li>
+      <li>
+        <img src="img/img-kvast.jpg" width="360" height="576" alt="Kvast">
+        <div class="catalog-item-hover">
+          <a href="#">
+            <h3>Kvast</h3>
+          </a>
+          <p>Промо-сайт производителя крафтового кваса</p>
+          <a class="button" href="#">9 900 руб.</a>
+        </div>
+      </li>
     </ul>
-  </div>
-  <div class="filters-features">
-    <h2>Особенности</h2>
-    <ul>
-      <li>Слайдер</li>
-      <li>Блок преимуществ</li>
-      <li>Новости</li>
-      <li>Галерея</li>
-      <li>Корзина</li>
+    <ul class="pages-list">
+      <li><a href="#">1</a></li>
+      <li><a href="#">2</a></li>
+      <li><a href="#">3</a></li>
     </ul>
-  </div>
-  <button class="button">Показать</button>
-  <div class="sorting">
-    <span>Сортировать</span>
-    <ul class="sorting-parameters">
-      <li class="sorting-parameters-current">По цене</li>
-      <li>По типу</li>
-      <li>По названию</li>
+  </main>
+  <footer>
+    <section class="contacts">
+      <h2 class="visually-hidden">Контакты</h2>
+      <div class="contacts-content">
+        <h3>Nёrds design studio</h3>
+        <p>191186, Санкт-Петербург,<br>
+          ул. Б. Конюшенная, д.19/8</p>
+        <p>тел. +7(812) 275-75-75</p>
+        <button class="button" type="button">Напишите нам</button>
+      </div>
+      <img src="img/map.jpg" width="1440" height="416" alt="Карта с нашим расположением">
+      <img src="img/map-marker.png" width="231" height="190" alt="Адрес компании: Санкт-Петербург, ул. Б. Конюшенная, д.19">
+    </section>
+    <section class="write-us">
+      <h2>Напишите нам</h2>
+      <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
+        <p class="write-us-item"><label for="write-us-name">Ваше имя:</label></p>
+        <input type="text" name="name" id="write-us-name" value="" placeholder="Имя Фамилия">
+        <p class="write-us-item"><label for="write-us-email">Ваш e-mail:</label></p>
+        <input type="text" name="email" id="write-us-email" value="" placeholder="email@example.com">
+        <p class="write-us-item"><label for="write-us-text">Текст письма</label></p>
+        <textarea id="write-us-text">В свободной форме</textarea>
+        <button class="button" type="submit">Отправить</button>
+        <button class="close-button" type="button">Закрыть</button>
+      </form>
+    </section>
+    <h2 class="visually-hidden">Мы в соцсетях</h2>
+    <ul class="social-networks">
+      <li><a href="#"><img src="img/vk-icon.svg" width="26" height="15" alt="vkontakte"></a></li>
+      <li><a href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="facebook"></a></li>
+      <li><a href="#"><img src="img/insta-icon.svg" width="21" height="21" alt="instagram"></a></li>
     </ul>
-    <button class="button-sorting">По убыванию</button>
-    <button class="button-sorting">По возрвстанию</button>
-  </div>
-  <ul class="catalog-list">
-    <li>
-      <img src="img/img-sedona.jpg" width="360px" height="576px" alt="Sedona">
-      <p class="catalog-item-hover">
-        <a href="#"><h3>Sedona</h3><a>
-        <span>Информационный сайт для туристов</span>
-        <a class="button" href="#">9 900 руб.</a>
-      </p>
-    </li>
-    <li>
-      <img src="img/img-pink.jpg" width="360px" height="576px" alt="pink">
-      <p class="catalog-item-hover">
-        <a href="#"><h3>Pink</h3><a>
-        <span>Продуктивный лендинг приложения для iOS и Android</span>
-        <a class="button" href="#">9 900 руб.</a>
-      </p>
-    </li>
-    <li>
-      <img src="img/img-barbershop.jpg" width="360px" height="576px" alt="Borodinski">
-      <p class="catalog-item-hover">
-        <a href="#"><h3>Borodinski</h3><a>
-        <span>Сайт салона красоты. Для мужчин,да.</span>
-        <a class="button" href="#">9 900 руб.</a>
-      </p>
-    </li>
-    <li>
-      <img src="img/img-mishka.jpg" width="360px" height="576px" alt="Mishka">
-      <p class="catalog-item-hover">
-        <a href="#"><h3>Mishka</h3><a>
-        <span>Интернет-магазин вязаных игрушек</span>
-        <a class="button" href="#">9 900 руб.</a>
-      </p>
-    </li>
-    <li>
-      <img src="img/img-aplus.jpg" width="360px" height="576px" alt="A plus">
-      <p class="catalog-item-hover">
-        <a href="#"><h3>A plus</h3><a>
-        <span>Лендинг курсов повышения квалификации</span>
-        <a class="button" href="#">9 900 руб.</a>
-      </p>
-    </li>
-    <li>
-      <img src="img/img-kvast.jpg" width="360px" height="576px" alt="Kvast">
-      <p class="catalog-item-hover">
-        <a href="#"><h3>Kvast</h3><a>
-        <span>Промо-сайт производителя крафтового кваса</span>
-        <a class="button" href="#">9 900 руб.</a>
-      </p>
-    </li>
-  </ul>
-  <ul class="pages-list"
-    <li><a href="#">1</a></li>
-    <li><a href="#">2</a></li>
-    <li><a href="#">3</a></li>
-  </ul>
-</main>
-<footer>
-<section class="contacts"
-  <h2 class="visually-hidden">Контакты<h2>
-    <h3>Nёrds design studio</h3>
-    <p>191186, Санкт-Петербург<br>
-       ул. Б. Конюшенная, д.19/8</p>
-    <p>тел. +7(812) 275-75-75<p>
-    <button class="button">Напишите нам</button>
-  <img src="img/map.jpg" width="1440px" height="416px" alt="map">
-  <img src="img/map-marker.png" width="231px" height="190px"alt="geo-tag">
-</section>
-<!-- Здесь форма "напишите нам" -->
-<h2 class="visually-hidden">Мы в соцсетях</h2>
-<ul class="social networks">
-<li><a href="#"><img src="img/vk-icon.svg" width="26px" height="15px" alt="vkontakte"></a></li>
-<li><a href="#"><img src="img/fb-icon.svg" width="12px" height="22px" alt="facebook"></a></li>
-<li><a href="#"><img src="img/insta-icon.svg" width="21px" height="21px" alt="instagram"></a></li>
-</ul>
-<p><b>Давайте дружить, это выгодно!</b>
-Скидка 10% для друзей из социальных сетей</p>
-</footer>
+    <p><b>Давайте дружить, это выгодно!</b>
+      Скидка 10% для друзей из социальных сетей</p>
+  </footer>
 </body>
+
 </html>
