--- a/catalog.html
+++ b/catalog.html
@@ -4,16 +4,19 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Нёрдс</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <header>
     <nav>
       <a href="index.html"><img src="img/nerds-logo.svg" width="160" height="65" alt="Нёрдс"></a>
-      <ul class="site-navigation-current">
+      <ul class="site-navigation">
         <li><a href="#">Студия</a></li>
         <li><a href="#">Клиенты</a></li>
-        <li><a href="catalog.html">Магазин</a></li>
+        <li><a href="#">Магазин</a></li>
         <li><a href="#">Контакты</a></li>
       </ul>
       <div class="cart">
@@ -25,47 +28,76 @@
     <h1>Магазин готовых шаблонов</h1>
     <section class="filters">
       <h2 class="visually-hidden">Фильтр шаблонов</h2>
-      <h3>Стоимость</h3>
-      <div class="price-range">
-        <span class="handle">Минимальная цена</span>
-        <span class="handle">Максимальная цена</span>
-        <span>От</span>
-        <span class="output-price">0</span>
-        <span>До</span>
-        <span class="output-price">15000</span>
-      </div>
-      <form class="filter" method="get" action="https://htmlacademy.ru">
+      <form class="filter" action="https://echo.htmlacademy.ru" method="get">
+        <fieldset>
+          <legend>Стоимость:</legend>
+
+          <ul>
+            <li class="price-range">
+            <label for="price-min">От</label>
+              <input class="price-input" type="number" id="price-min" value="0"></input>
+            </li>
+            <li class="price-range">
+            <label for="price-max">До</label>
+              <input class="price-input" type="number" id="price-max" value="15000"></input>
+            </li>
+          </ul>
+        </fieldset>
         <fieldset>
           <legend>Сетка:</legend>
           <ul>
-            <li class="filters-option"><input class="filter-radio" type="radio" name="grid-type" value="adaptive" id="adaptive-grid" checked><label for="adaptive-grid">Адаптивная</label></li>
-            <li class="filters-option"><input class="filter-radio" type="radio" name="grid-type" value="fixed" id="fixed-grid"><label for="fixed-grid">Фиксированная</label></li>
-            <li class="filters-option"><input class="filter-radio" type="radio" name="grid-type" value="rubber" id="rubber-grid"><label for="rubber-grid">Резиновая</label></li>
+            <li class="filters-option">
+              <input class="filter-radio" type="radio" name="grid-type" value="adaptive" id="adaptive-grid" checked>
+              <label for="adaptive-grid">Адаптивная</label>
+            </li>
+            <li class="filters-option">
+              <input class="filter-radio" type="radio" name="grid-type" value="fixed" id="fixed-grid">
+              <label for="fixed-grid">Фиксированная</label>
+            </li>
+            <li class="filters-option">
+              <input class="filter-radio" type="radio" name="grid-type" value="rubber" id="rubber-grid">
+              <label for="rubber-grid">Резиновая</label>
+            </li>
           </ul>
         </fieldset>
         <fieldset>
           <legend>Особенности:</legend>
           <ul>
-            <li class="filters-option"><input class="filter-checkbox" type="checkbox" name="slider" id="checkbox-slider" checked><label for="checkbox-slider">Слайдер</label></li>
-            <li class="filters-option"><input class="filter-checkbox" type="checkbox" name="features-block" id="checkbox-features-block"><label for="checkbox-features-block">Блок преимуществ</label></li>
-            <li class="filters-option"><input class="filter-checkbox" type="checkbox" name="news" id="checkbox-news" checked><label for="checkbox-news">Новости</label></li>
-            <li class="filters-option"><input class="filter-checkbox" type="checkbox" name="gallery" id="checkbox-gallery"><label for="checkbox-gallery">Галерея</label></li>
-            <li class="filters-option"><input class="filter-checkbox" type="checkbox" name="cart" id="checkbox-cart"><label for="checkbox-cart">Корзина</label></li>
+            <li class="filters-option">
+              <input class="filter-checkbox" type="checkbox" name="slider" id="checkbox-slider" checked>
+              <label for="checkbox-slider">Слайдер</label>
+            </li>
+            <li class="filters-option">
+              <input class="filter-checkbox" type="checkbox" name="features-block" id="checkbox-features-block" >
+              <label for="checkbox-features-block">Блок преимуществ</label>
+            </li>
+            <li class="filters-option">
+              <input class="filter-checkbox" type="checkbox" name="news" id="checkbox-news" checked>
+              <label for="checkbox-news">Новости</label>
+            </li>
+            <li class="filters-option">
+              <input class="filter-checkbox" type="checkbox" name="gallery" id="checkbox-gallery">
+              <label for="checkbox-gallery">Галерея</label>
+            </li>
+            <li class="filters-option">
+              <input class="filter-checkbox" type="checkbox" name="cart" id="checkbox-cart">
+              <label for="checkbox-cart">Корзина</label>
+            </li>
           </ul>
         </fieldset>
-        <button class="button" type="submit">Показать</button>
+        <button class="submit-button" type="submit">Показать</button>
       </form>
       <div class="sorting">
         <h3>Сортировать:</h3>
-        <button class="sorting-parameters-current" type="button">По цене</button>
-        <button class="sorting-parameters" type="button">По типу</button>
-        <button class="sorting-parameters" type="button">По названию</button>
-        <button class="button-sorting" type="button">По убыванию</button>
-        <button class="button-sorting" type="button">По возрастанию</button>
+        <a class="sorting-parameters-current" type="button">По цене</a>
+        <a class="sorting-parameters" type="button">По типу</a>
+        <a class="sorting-parameters" type="button">По названию</a>
+        <a class="button-sorting" type="button">По убыванию</a>
+        <a class="button-sorting" type="button">По возрастанию</a>
       </div>
     </section>
     <ul class="catalog-list">
-      <li>
+      <li class="catalog-item">
         <img src="img/img-sedona.jpg" width="360" height="576" alt="Sedona">
         <div class="catalog-item-hover">
           <a href="#">
@@ -75,7 +107,7 @@
           <a class="button" href="#">9 900 руб.</a>
         </div>
       </li>
-      <li>
+      <li class="catalog-item">
         <img src="img/img-pink.jpg" width="360" height="576" alt="Pink">
         <div class="catalog-item-hover">
           <a href="#">
@@ -85,7 +117,7 @@
           <a class="button" href="#">9 900 руб.</a>
         </div>
       </li>
-      <li>
+      <li class="catalog-item">
         <img src="img/img-barbershop.jpg" width="360" height="576" alt="Borodinski">
         <div class="catalog-item-hover">
           <a href="#">
@@ -95,7 +127,7 @@
           <a class="button" href="#">9 900 руб.</a>
         </div>
       </li>
-      <li>
+      <li class="catalog-item">
         <img src="img/img-mishka.jpg" width="360" height="576" alt="Mishka">
         <div class="catalog-item-hover">
           <a href="#">
@@ -105,7 +137,7 @@
           <a class="button" href="#">9 900 руб.</a>
         </div>
       </li>
-      <li>
+      <li class="catalog-item">
         <img src="img/img-aplus.jpg" width="360" height="576" alt="A plus">
         <div class="catalog-item-hover">
           <a href="#">
@@ -115,7 +147,7 @@
           <a class="button" href="#">9 900 руб.</a>
         </div>
       </li>
-      <li>
+      <li class="catalog-item">
         <img src="img/img-kvast.jpg" width="360" height="576" alt="Kvast">
         <div class="catalog-item-hover">
           <a href="#">
@@ -130,6 +162,7 @@
       <li><a href="#">1</a></li>
       <li><a href="#">2</a></li>
       <li><a href="#">3</a></li>
+      <li><a href="#">Следующая</a></li>
     </ul>
   </main>
   <footer>
@@ -153,7 +186,7 @@
         <p class="write-us-item"><label for="write-us-email">Ваш e-mail:</label></p>
         <input type="text" name="email" id="write-us-email" value="" placeholder="email@example.com">
         <p class="write-us-item"><label for="write-us-text">Текст письма</label></p>
-        <textarea id="write-us-text">В свободной форме</textarea>
+        <textarea id="write-us-text" placeholder="В свободной форме"></textarea>
         <button class="button" type="submit">Отправить</button>
         <button class="close-button" type="button">Закрыть</button>
       </form>
