--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Нёрдс</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <header>
-    <a href="index.html"><img src="img/nerds-logo.svg" width="160" height="65" alt="Нёрдс"></a>
+    <a href="#"><img src="img/nerds-logo.svg" width="160" height="65" alt="Нёрдс"></a>
     <nav>
       <ul class="site-navigation">
         <li><a href="#">Студия</a></li>
@@ -27,51 +30,52 @@
       <div class="slider-1">
         <h2>Долго, дорого, скрупулёзно</h2>
         <p class="slider-description">
-          Математически выверенный дизайн для вашего сайта или мобильного приложения.
+        Математически выверенный дизайн для вашего сайта или мобильного приложения.
         </p>
-        <a class="button" href="#">Узнать больше</a>
       </div>
       <div class="slider-2">
         <h2>Любим математику как никто другой</h2>
         <p class="slider-description">
-          Никакого креатива, только математические формулы для расчёта идеальных пропорций.
+        Никакого креатива, только математические формулы для расчёта идеальных пропорций.
         </p>
-        <a class="button" href="#">Узнать больше</a>
       </div>
       <div class="slider-3">
         <h2>Только ночь, только хардкор</h2>
         <p class="slider-description">
-          Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.
+        Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.
         </p>
-        <a class="button" href="#">Узнать больше</a>
       </div>
+      <a class="button button-red slider-button" href="#">Узнать больше</a>
     </section>
     <section class="services">
       <h2 class="visually-hidden">Направления работы</h2>
-      <ul>
+      <ul class="services">
         <li class="services-item">
           <h3>Веб-сайты</h3>
+          <img src="img/illustration-1.png" width="300" height="146" alt="Веб-сайты">
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-          <a class="button services-button" href="#">Заказать</a>
+          <a class="button button-red services-button" href="#">Заказать</a>
         </li>
         <li class="services-item">
           <h3>Приложения</h3>
+          <img src="img/illustration-2.png" width="300" height="146" alt="Приложения">
           <p>Покорите Топ-10 приложений в Appstore и Google Play</p>
-          <a class="button services-button" href="#">Заказать</a>
+          <a class="button button-green services-button" href="#">Заказать</a>
         </li>
         <li class="services-item">
           <h3>Презентации</h3>
+          <img src="img/illustration-3.png" width="300" height="146" alt="Презентации">
           <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-          <a class="button services-button" href="#">Заказать</a>
+          <a class="button button-yellow services-button" href="#">Заказать</a>
         </li>
       </ul>
     </section>
     <section class="overview">
       <h2 class="visually-hidden">Краткий обзор студии</h2>
       <div class="overview-content">
-        <b>Мы- маленькая, но гордая дизайн-студия из Краснодара</b>
+        <b>Мы- маленькая, но гордая дизайн-студия из Краснодара.</b>
         <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчёт превыше креатива. Работаем не покладая рук, как роботы.</p>
-        <h3>Выполняем заказы на разработку</h3>
+        <h3>Выполняем заказы на разработку:</h3>
         <ul class="overview-list">
           <li>Веб-сайтов любой сложности</li>
           <li>Мобильных приложений для iOS и Android</li>
@@ -81,16 +85,25 @@
       <div class="principles">
         <img src="img/nerds-illustration.png" width="360" height="208" alt="Логотип Нёрдс">
         <h3>С 2004 года любим точность во всём:</h3>
-        <ul>
-          <li class="principles-item">146<span>%</span> Уровень самоотдачи</li>
-          <li class="principles-item">100<span>%</span> Соблюдение сроков</li>
-          <li class="principles-item">50<span>%</span> Минимальная предоплата</li>
-        </ul>
+        <table>
+          <tr class="percentage">
+            <td>146<span>%</span></td>
+            <td>100<span>%</span></td>
+            <td>50<span>%</span></td>
+          </tr>
+          <tr>
+            <td>Уровень самоотдачи</td>
+            <td>Соблюдение сроков</td>
+            <td>Минимальная предоплата</td>
+          </tr>
+        </table>
       </div>
     </section>
     <section class="clients">
       <h2 class="visually-hidden">Наши клиенты</h2>
-      <img src="img/logo-1.png" width="199" height="68" alt="Логотип htmlacademy">
+      <a href="https://htmlacademy.ru/intensive/htmlcss">
+        <img src="img/logo-1.png" width="199" height="68" alt="Логотип htmlacademy">
+      </a>
       <img src="img/logo-2.png" width="209" height="90" alt="Логотип borodinski">
       <img src="img/logo-3.png" width="185" height="52" alt="Логотип pink">
       <img src="img/logo-4.png" width="173" height="84" alt="Логотип mishka">
@@ -104,7 +117,7 @@
         <p>191186, Санкт-Петербург,<br>
           ул. Б. Конюшенная, д.19/8</p>
         <p>тел. +7(812) 275-75-75</p>
-        <button class="button" type="button">Напишите нам</button>
+        <button class="button button-red write-us-button" type="button">Напишите нам</button>
       </div>
       <img src="img/map.jpg" width="1440" height="416" alt="Карта с нашим расположением">
       <img src="img/map-marker.png" width="231" height="190" alt="Адрес компании: Санкт-Петербург, ул. Б. Конюшенная, д.19">
@@ -115,10 +128,10 @@
         <p class="write-us-item"><label for="write-us-name">Ваше имя:</label></p>
         <input type="text" name="name" id="write-us-name" value="" placeholder="Имя Фамилия">
         <p class="write-us-item"><label for="write-us-email">Ваш e-mail:</label></p>
-        <input type="text" name="email" id="write-us-email" value="" placeholder="email@example.com">
+        <input type="email" name="email" id="write-us-email" value="" placeholder="email@example.com">
         <p class="write-us-item"><label for="write-us-text">Текст письма</label></p>
-        <textarea id="write-us-text">В свободной форме</textarea>
-        <button class="button" type="submit">Отправить</button>
+        <textarea id="write-us-text" placeholder="В свободной форме"></textarea>
+        <button class="button button-red submit-button" type="submit">Отправить</button>
         <button class="close-button" type="button">Закрыть</button>
       </form>
     </section>
@@ -128,8 +141,10 @@
       <li><a href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="facebook"></a></li>
       <li><a href="#"><img src="img/insta-icon.svg" width="21" height="21" alt="instagram"></a></li>
     </ul>
-    <p><b>Давайте дружить, это выгодно!</b>
-      Скидка 10% для друзей из социальных сетей</p>
+    <b>
+      <p>Давайте дружить, это выгодно!</p>
+    </b>
+    <p class="discount">Скидка 10% для друзей из социальных сетей</p>
   </footer>
 </body>
 
