добавила сортировке базовую стилизацию

--- a/catalog.html
+++ b/catalog.html
@@ -89,11 +89,11 @@
       </form>
       <div class="sorting">
         <h3>Сортировать:</h3>
-        <a class="sorting-parameters-current" type="button">По цене</a>
-        <a class="sorting-parameters" type="button">По типу</a>
-        <a class="sorting-parameters" type="button">По названию</a>
-        <a class="button-sorting" type="button">По убыванию</a>
-        <a class="button-sorting" type="button">По возрастанию</a>
+        <a class="sorting-parameters sorting-parameters-current" >По цене</a>
+        <a class="sorting-parameters" >По типу</a>
+        <a class="sorting-parameters" >По названию</a>
+        <a class="sorting-parameters sorting-parameters-current button-sorting" >По убыванию</a>
+        <a class="sorting-parameters button-sorting" >По возрастанию</a>
       </div>
     </section>
     <ul class="catalog-list">
