добавила базовую стилизацию номеров страниц в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -104,7 +104,7 @@
             <h3>Sedona</h3>
           </a>
           <p>Информационный сайт для туристов</p>
-          <a class="button" href="#">9 900 руб.</a>
+          <a class="button button-red" href="#">9 900 руб.</a>
         </div>
       </li>
       <li class="catalog-item">
@@ -114,7 +114,7 @@
             <h3>Pink</h3>
           </a>
           <p>Продуктивный лендинг приложения для iOS и Android</p>
-          <a class="button" href="#">9 900 руб.</a>
+          <a class="button button-red" href="#">9 900 руб.</a>
         </div>
       </li>
       <li class="catalog-item">
@@ -124,7 +124,7 @@
             <h3>Borodinski</h3>
           </a>
           <p>Сайт салона красоты. Для мужчин,да.</p>
-          <a class="button" href="#">9 900 руб.</a>
+          <a class="button button-red" href="#">9 900 руб.</a>
         </div>
       </li>
       <li class="catalog-item">
@@ -134,7 +134,7 @@
             <h3>Mishka</h3>
           </a>
           <p>Интернет-магазин вязаных игрушек</p>
-          <a class="button" href="#">9 900 руб.</a>
+          <a class="button button-red" href="#">9 900 руб.</a>
         </div>
       </li>
       <li class="catalog-item">
@@ -144,7 +144,7 @@
             <h3>A plus</h3>
           </a>
           <p>Лендинг курсов повышения квалификации</p>
-          <a class="button" href="#">9 900 руб.</a>
+          <a class="button button-red" href="#">9 900 руб.</a>
         </div>
       </li>
       <li class="catalog-item">
@@ -154,12 +154,12 @@
             <h3>Kvast</h3>
           </a>
           <p>Промо-сайт производителя крафтового кваса</p>
-          <a class="button" href="#">9 900 руб.</a>
+          <a class="button button-red" href="#">9 900 руб.</a>
         </div>
       </li>
     </ul>
     <ul class="pages-list">
-      <li><a href="#">1</a></li>
+      <li><a class="current" href="#">1</a></li>
       <li><a href="#">2</a></li>
       <li><a href="#">3</a></li>
       <li><a href="#">Следующая</a></li>
